Fixed header misalignment

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ hr {
     margin-right: -1.5em;
 }
 
-hr + :not(#header-flex-container) {
+hr + :not(.header-flex-container) {
     margin-top: 1.5em;
 }
 
